Update language class test file after fix

--- a/tests/code_fence.html
+++ b/tests/code_fence.html
@@ -13,7 +13,7 @@ eggs bacon
 after empty line
 </code></pre>
 <p>Language info strings will add a class to the code block</p>
-<pre><code class=language-"sh">#!/bin/sh
+<pre><code class="language-sh">#!/bin/sh
 ls -la .
 </code></pre>
 <p>Accidental code fences can be avoided by escaping
