Make lists interrupt paragraphs
Closes https://github.com/karlb/smu/issues/1

--- a/tests/lists.html
+++ b/tests/lists.html
@@ -7,3 +7,8 @@
 <li>Two</li>
 <li>Three</li>
 </ol>
+<p>HTML does not allow lists in paragraphs, so the following should end the paragraph before starting the list:</p>
+
+<ul>
+<li>bar</li>
+</ul>
