--- a/tests/mdtest/Ordered_and_unordered_lists.html
+++ b/tests/mdtest/Ordered_and_unordered_lists.html
@@ -116,13 +116,13 @@ back.</p>
 <ol>
 <li><p>First</p>
 </li>
-<li><p>Second:
+<li><p>Second:</p>
+
 <ul>
 <li>Fee</li>
 <li>Fie</li>
 <li>Foe</li>
 </ul>
-</p>
 </li>
 <li><p>Third</p>
 </li>
