--- a/tests/testdoc.html
+++ b/tests/testdoc.html
@@ -8,33 +8,34 @@ testing surround: <em>emph</em> then <strong>strong</strong> and <code>code</cod
 <hr />
 <h2>blocks and entities</h2>
 <p>preformatted block:
+</p>
 <pre><code>.'''' .'.'. |  |
  '''. | ' | |  |
 ''''  '   '  &quot;&quot;
 </code></pre>
-</p>
 <p>quoted text:
+</p>
 <blockquote><p>When in doubt,
 use brute force.</p>
 </blockquote>
-</p>
-<p>list:
+<p>list:</p>
+
 <ul>
 <li>Make each program do one thing well.</li>
 <li>Expect the output of every program to become the input to another,</li>
 </ul>
-<p>as yet unknown, program.
+<p>as yet unknown, program.</p>
+
 <ul>
 <li>Design and build software, even operating systems, to be tried early,</li>
 </ul>
-<p>ideally within weeks.
+<p>ideally within weeks.</p>
+
 <ul>
 <li>Use tools in preference to unskilled help to lighten a programming task.</li>
 </ul>
-</p>
-</p>
-</p>
-<p>list in list:
+<p>list in list:</p>
+
 <ul>
 <li>a
 <ul>
@@ -49,14 +50,13 @@ use brute force.</p>
 </li>
 <li>f</li>
 </ul>
-</p>
 <p>entity: &amp;, &lt;, &gt;</p>
 <p>code:
+</p>
 <pre><code>int powerof2(unsigned int n) {
 	return !((n - 1) &amp; n) &amp;&amp; n &gt; 0;
 }
 </code></pre>
-</p>
 <h2>links</h2>
 <p>link: <a href="http://suckless.org/">suckless</a></p>
 <p>link with title: <a href="http://suckless.org/" title="software that sucks less">suckless</a></p>
