commit the test output

--- a/tests/table.html
+++ b/tests/table.html
@@ -1,5 +1,9 @@
 <table>
+<tr><th>1st field </th><th>2nd field </th></tr>
+<tr><td>1st entry </td><td>2nd entry </td></tr>
+</table>
+<p>And here is another table</p>
+<table>
 <tr><th>Heading 1 </th><th>Some other heading </th></tr>
-
-fooo<tr><td>1st field </td><td>2nd field </td></tr>
-And here is another table<tr><td>Heading 1 </td><td class="right">Some other heading </td></tr>
+<tr><td>I am a table cell. </td><td>Me too! </td></tr>
+</table>
