adjust table test

--- a/tests/table.html
+++ b/tests/table.html
@@ -1,6 +1,6 @@
 <table>
-<tr><th>1st field </th><th>2nd field </th></tr>
-<tr><td>1st entry </td><td>2nd entry </td></tr>
+<tr><th>1st field </th><th>2nd field </th><th>3rd field </th></tr>
+<tr><td class="left">1st entry </td><td class="center">2nd entry </td><td class="right">3rd entry </td></tr>
 </table>
 <p>And here is another table</p>
 <table>
