--- a/tests/table.html
+++ b/tests/table.html
@@ -1,5 +1,5 @@
 <table>
-<tr><th>1st field </th><th>2nd field </th><th>3rd field </th></tr>
+<tr><th class="left">1st field </th><th class="center">2nd field </th><th class="right">3rd field </th></tr>
 <tr><td class="left">1st entry </td><td class="center">2nd entry </td><td class="right">3rd entry </td></tr>
 </table>
 <p>And here is another table</p>
