use align attribute similar to other parsers
most other parsers either use `align` or use `style="text-align: "`

--- a/tests/table.html
+++ b/tests/table.html
@@ -1,6 +1,6 @@
 <table>
-<tr><th class="left">1st field </th><th class="center">2nd field </th><th class="right">3rd field </th></tr>
-<tr><td class="left">1st entry </td><td class="center">2nd entry </td><td class="right">3rd entry </td></tr>
+<tr><th align="left">1st field </th><th align="center">2nd field </th><th align="right">3rd field </th></tr>
+<tr><td align="left">1st entry </td><td align="center">2nd entry </td><td align="right">3rd entry </td></tr>
 </table>
 <p>And here is another table</p>
 <table>
