Use CSS text-align in table
The align attribute is obsolete and not valid HTML5, see https://html.spec.whatwg.org/multipage/obsolete.html#non-conforming-features.

--- a/tests/table.html
+++ b/tests/table.html
@@ -1,6 +1,6 @@
 <table>
-<tr><th align="left">1st field </th><th align="center">2nd field </th><th align="right">3rd field </th></tr>
-<tr><td align="left">1st entry </td><td align="center">2nd entry </td><td align="right">3rd entry </td></tr>
+<tr><th style="text-align: left">1st field </th><th style="text-align: center";À>2nd field </th><th style="text-align: right">3rd field </th></tr>
+<tr><td style="text-align: left">1st entry </td><td style="text-align: center";À>2nd entry </td><td style="text-align: right">3rd entry </td></tr>
 </table>
 <p>And here is another table</p>
 <table>
