--- a/tests/table.html
+++ b/tests/table.html
@@ -1,6 +1,6 @@
 <table>
-<tr><th style="text-align: left">1st field </th><th style="text-align: center";À>2nd field </th><th style="text-align: right">3rd field </th></tr>
-<tr><td style="text-align: left">1st entry </td><td style="text-align: center";À>2nd entry </td><td style="text-align: right">3rd entry </td></tr>
+<tr><th style="text-align: left">1st field </th><th style="text-align: center">2nd field </th><th style="text-align: right">3rd field </th></tr>
+<tr><td style="text-align: left">1st entry </td><td style="text-align: center">2nd entry </td><td style="text-align: right">3rd entry </td></tr>
 </table>
 <p>And here is another table</p>
 <table>
